# zar

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
ci/: Dockerfile  build.sh  docker.sh  init.sh  preamble.sh  publish.sh  run.sh  test.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: macos_xar.rs  openssl.rs
src/: apple.rs  archive.rs  builder.rs  checksum.rs  compression.rs  file_mode.rs  file_status.rs  file_type.rs  header.rs  lib.rs  mk.rs  read.rs  root_certs.rs  rsa_signer.rs  signer.rs  walk.rs  xml.rs
