[package]
name = "zar"
version.workspace = true
license.workspace = true
edition = "2021"
homepage = "https://github.com/igankevich/zar"
repository = "https://github.com/igankevich/zar"
documentation = "https://docs.rs/zar"
readme = "README.md"
description = "XAR archive reader/writer library. Fuzz-tested against MacOS xar."
keywords = ["xar", "archive"]
categories = ["encoding", "filesystem"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE", "certs/*.der"]

[features]
default = ["apple-root-cert"]
# Include Apple root certificate as trusted by default.
apple-root-cert = []

[dependencies]
base16ct = { version = "0.2.0", features = ["std"], default-features = false }
base64ct = { version = "1.6.0", features = ["std"], default-features = false }
bzip2 = "0.4.4"
chrono = "0.4.38"
deko = { version = "0.1.0", features = ["flate2", "bzip2", "xz"], default-features = false }
digest = "0.10.7"
flate2 = "1.0.35"
libc = "0.2.168"
md5 = "0.7.0"
normalize-path = "0.2.1"
quick-xml = { version = "0.37.1", features = ["serialize"], default-features = false }
rsa = { version = "0.9.7", features = ["sha2", "sha1"] }
serde = { version = "1.0.215", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
x509-cert = "0.2.5"
xz = "0.1.0"

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arbtest = "0.3.1"
random-dir = "0.2.4"
similar-asserts = "1.6.0"
tempfile = "3.14.0"
x509-cert = { version = "0.2.5", features = ["builder"] }

[build-dependencies]
x509-cert = { version = "0.2.5", features = ["builder"] }

[workspace.dependencies]
zar = { path = ".", version = "*" }

[profile.dev.package.rsa]
opt-level = 3

[workspace]
members = [".", "cli"]

[workspace.package]
version = "0.1.2"
license = "MIT"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
